# OmniOS

./: .gitignore  .gitmodules  ARCHITECTURE_v2.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  README_OMNIOSSUMMARY.md  docker-compose.yml  requirements.txt  setup.bat  setup.sh
.github/workflows/: c-cpp.yml  ci.yml
core/: Makefile  api_translator.c  gesture_engine.c  memory.c  process_manager.c  runtime_loader.c  security.c  state_machine.c  test_core.c
core/include/: omnios_cheri.h  omnios_core.h
core/security/: seccomp_profiles.c
docs/: README.md  api-specification.md  architecture.md  concept.md  development-guide.md  features.md  technical-requirements.md  ui-specs.md
kernel/: Makefile  kernel_main.c  klog.c  klog.h  linker.ld  linker_arm64.ld  scheduler.c  syscall.c  syscall.h  syscalls.c  timer.c
kernel/configs/: omnios_mobile_defconfig  omnios_x86_64_defconfig
kernel/display/: display_hal.c  display_hal.h
kernel/drivers/: driver_model.c  pci.c  pci.h  tty.c  tty.h  virtio.c  virtio.h
kernel/fs/: devfs.c  devfs.h  elf.c  elf.h  initramfs.c  initramfs.h  procfs.c  procfs.h  vfs.c
kernel/hal/: mobile_hal.c  mobile_hal.h
kernel/include/: omnios_kernel.h
kernel/ipc/: ipc.c  pipe.c  pipe.h
kernel/mm/: memory.c  pmm.c  pmm.h  vmm.c  vmm.h
kernel/net/: network.c
kernel/power/: power_hal.c  power_hal.h
kernel/proc/: process.c  process.h  signal.c  signal.h
kernel/sched/: sched.c  sched.h
kernel/sensors/: sensor_hal.c  sensor_hal.h
kernel/tests/: test_kernel.c
omnios_app/: pubspec.yaml
omnios_app/lib/: main.dart
plugins/: app_recommender_plugin.py  system_monitor_plugin.py  weather_plugin.py
scripts/: build_rootfs.sh  gen_initramfs.sh  ota_update.sh  partition_layout.sh  run_qemu.sh
src/: main.py  main_improved.py
src/apps/: app_manager.py
src/compatibility/: android_layer.py  ios_layer.py
src/core/: __init__.py  animation.py  api_translator.py  c_bridge.py  distributed.py  engine.py  gesture_engine.py  logger.py  memory_manager.py  ml_system.py  mode_manager.py  notification_center.py  plugin_system.py  power_manager.py  process_manager.py  security.py  settings_manager.py  theme_manager.py  time_travel.py
src/modes/: flow_mode.py  normal_mode.py
src/tests/: benchmark.py  test_engine.py
src/ui/: phone_canvas.py  widgets.py
userspace/apps/: hello.c
userspace/compositor/: meson.build  omnios-compositor.c
userspace/flutter-embedder/: CMakeLists.txt  embedder.c
userspace/init/: init.c
web/: index.html
(+83 files in other folders)
